--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -13,6 +13,11 @@
 
 @media screen and (max-width: 700px) {
     .profile__edit {
-        margin-left: 10px;
+        margin: 0;
+        position: absolute;
+        right: -40px;
+        top: 0;
+        bottom: 0;
+        align-self:flex-end;
     }
 }
