--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -19,3 +19,10 @@
 .popup__button:hover {
     opacity: 0.8;
 }
+
+@media screen and (max-width: 700px) {
+    .popup__button {
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
