--- a/blocks/profile/__comment/profile__comment.css
+++ b/blocks/profile/__comment/profile__comment.css
@@ -3,6 +3,9 @@
     font-size: 18px;
     line-height: 22px;
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 700px) {
@@ -10,5 +13,6 @@
         font-size: 14px;
         line-height: 17px;
         text-align: center;
+        max-width: 200px;
     }
 }
