--- a/blocks/profile/__header/profile__header.css
+++ b/blocks/profile/__header/profile__header.css
@@ -5,6 +5,7 @@
     line-height: 48px;
     margin: 0;
     padding: 0 18px 16px 0;
+    max-width: 500px;
 }
 
 @media screen and (max-width: 700px) {
