--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -2,3 +2,9 @@
     max-width: 880px;
     margin: auto;
 }
+
+@media screen and (max-width: 320px) {
+    .cards {
+        max-width: 282px;
+    }
+}
