--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,10 +1,4 @@
 .footer {
-    font-family: 'Inter', Arial, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 22px;
-    color: #545454;
     max-width: 880px;
     margin: auto;
     padding-top: 66px;
@@ -14,5 +8,6 @@
 @media screen and (max-width: 700px) {
     .footer {
         padding: 48px 0 36px 0;
+        max-width: 282px;
     }
 }
