--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,6 @@
 .header {
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    /* opacity: 0.7; */
     max-width: 880px;
     margin: 0 auto 0;
     padding: 45px 0 41px;
@@ -8,5 +9,11 @@
 @media screen and (max-width: 700px) {
     .header {
         padding: 28px 0 31.6px 8px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header {
+        padding-left: 27px;
     }
 }
