--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -9,4 +9,13 @@
     top: -40px;
     border: none;
     background-color: transparent;
+    transition: opacity 0.2s ease;
+}
+
+@media screen and (max-width: 700px) {
+    .popup__close-btn {
+        width: 26px;
+        height: 26px;
+        right: -5px;
+    }
 }
