--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     max-width: 430px;
     width: 66%;
-    height: 330px;
+    max-height: 330px;
     background: #FFFFFF;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
