--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -7,6 +7,6 @@
     height: 27px;
     margin: 0 0 30px 0;
     border: 0;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
 }
