--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -11,11 +11,13 @@
     justify-content: flex-end;
     border: 1px solid white;
     margin-left: 10px;
+    transition: opacity 0.2s ease;
 }
 
 @media screen and (max-width: 700px) {
     .profile__button {
         width: 282px;
         margin: 36px auto 0;
+        background-size: 16px 16px;
     }
 }
