--- a/blocks/profile/__comment/profile__comment.css
+++ b/blocks/profile/__comment/profile__comment.css
@@ -4,6 +4,10 @@
     line-height: 22px;
     margin: 0;
     max-width: 500px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 300px;
 }
 
 @media screen and (max-width: 700px) {
