--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -9,15 +9,17 @@
     background-position: center;
     border: 1px solid white;
     align-self: center;
+    transition: opacity 0.2s ease;
 }
 
 @media screen and (max-width: 700px) {
     .profile__edit {
-        margin: 0;
         position: absolute;
-        right: -40px;
+        right: -29px;
         top: 0;
         bottom: 0;
-        align-self:flex-end;
+        width: 18px;
+        height: 18px;
+        margin-top: 7px;
     }
 }
