--- a/blocks/profile/__header/profile__header.css
+++ b/blocks/profile/__header/profile__header.css
@@ -5,7 +5,10 @@
     line-height: 48px;
     margin: 0;
     padding: 0 18px 16px 0;
-    max-width: 500px;
+    max-width: 300px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 700px) {
