--- a/blocks/cards/__elements/cards__elements.css
+++ b/blocks/cards/__elements/cards__elements.css
@@ -1,9 +1,11 @@
 .cards__elements {
     padding: 0;
-    margin: 0;
+    margin: auto;
     list-style: none;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
+    /* grid-template-columns: repeat(3, 1fr); */
     column-gap: 17px;
     row-gap: 20px;
+    max-width: 880px;
 }
