--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,6 +8,11 @@
 @media screen and (max-width: 700px) {
     .footer {
         padding: 48px 0 36px 0;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .footer {
         max-width: 282px;
     }
 }
