--- a/pages/index.css
+++ b/pages/index.css
@@ -11,7 +11,7 @@
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
-@import url(../blocks/profile/__button/profile__button.css);
+@import url(../blocks/profile/__add-btn/profile__add-btn.css);
 @import url(../blocks/profile/__header/profile__header.css);
 @import url(../blocks/profile/__comment/profile__comment.css);
 @import url(../blocks/profile/__edit/profile__edit.css);
@@ -21,18 +21,26 @@
 
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__elements/cards__elements.css);
+@import url(../blocks/cards/__item/cards__item.css);
 @import url(../blocks/cards/__photo/cards__photo.css);
 @import url(../blocks/cards/__caption/cards__caption.css);
 @import url(../blocks/cards/__like/cards__like.css);
+@import url(../blocks/cards/__like/_active/cards__like_active.css);
 @import url(../blocks/cards/__container/cards__container.css);
+@import url(../blocks/cards/__trash/cards__trash.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
 
 @import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__container//popup__container.css);
+@import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__header/popup__header.css);
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__close-btn/popup__close-btn.css);
 @import url(../blocks/popup/_open/popup_open.css);
+@import url(../blocks/popup/__type_open_photo/popup__type_open_photo.css);
+
+@import url(../blocks/figure/figure.css);
+@import url(../blocks/figure/__photo/figure__photo.css);
+@import url(../blocks/figure/__caption/figure__caption.css);
