--- a/blocks/template/__trash/template__trash.css
+++ b/blocks/template/__trash/template__trash.css
@@ -1,4 +1,4 @@
-.cards__trash {
+.template__trash {
     background: url(../../../images/trash.svg) no-repeat;
     width: 18px;
     height: 19.3px;
