--- a/blocks/template/__caption/template__caption.css
+++ b/blocks/template/__caption/template__caption.css
@@ -1,4 +1,4 @@
-.cards__caption {
+.template__caption {
     background-color: white;
     font-family: 'Inter', Arial, sans-serif;
     font-weight: 900;
@@ -7,6 +7,6 @@
     max-width: 200px;
     margin: 0;
     text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+    white-space: nowrap;
+    overflow: hidden;
 }
