--- a/blocks/template/__container/template__container.css
+++ b/blocks/template/__container/template__container.css
@@ -1,4 +1,4 @@
-.cards__container {
+.template__container {
     display: flex;
     justify-content: space-between;
     padding: 25px 15px 31px 21px;
