--- a/blocks/template/__like/_active/template__like_active.css
+++ b/blocks/template/__like/_active/template__like_active.css
@@ -1,4 +1,4 @@
-.cards__like_active {
+.template__like_active {
     background: url(../../../../images/like_active.svg) center no-repeat;
     border: none;
     width: 22px;
