--- a/blocks/template/__like/template__like.css
+++ b/blocks/template/__like/template__like.css
@@ -1,4 +1,4 @@
-.cards__like {
+.template__like {
     width: 22px;
     height: 19px;
     display: inline-block;
@@ -10,7 +10,7 @@
     transition: opacity 0.2s ease;
 }
 
-.cards__like:hover {
+.template__like:hover {
     cursor: pointer;
     opacity: 0.5;
 }
