--- a/pages/index.css
+++ b/pages/index.css
@@ -34,10 +34,15 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__header/popup__header.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__button/_inactive/popup__button_inactive.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__close-btn/popup__close-btn.css);
 @import url(../blocks/popup/_open/popup_open.css);
 @import url(../blocks/popup/_type_open-photo/popup_type_open-photo.css);
+
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
 
 @import url(../blocks/figure/figure.css);
 @import url(../blocks/figure/__photo/figure__photo.css);
